# MiniLangInterpreter

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lugeek/minilanginterpreter/sample/: EnterEditText.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
interpreter/: build.gradle
interpreter/src/main/: AndroidManifest.xml
interpreter/src/main/cpp/: CMakeLists.txt  InputProgram.cpp  InputProgram.h  main.cpp  main_jni.cpp  native-lib.cpp
interpreter/src/main/java/com/lugeek/minilanginterpreter/: Interpreter.kt
